# ClosetRent

./: .env.example  .firebaserc  .gitignore  Makefile  README.md  firebase.json
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/middleware/: __init__.py  logging.py
backend/app/models/: __init__.py  listing.py  message.py  payment.py  rental.py  review.py  user.py
backend/app/routers/: __init__.py  auth.py  listings.py  messages.py  payments.py  rentals.py  reviews.py  search.py  storage.py  users.py
backend/app/schemas/: __init__.py  listing.py  message.py  rental.py  review.py  user.py
backend/app/services/: __init__.py  algolia_service.py  firebase_service.py  storage.py  stripe_service.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_add_south_asian_category.py  003_add_messages.py
backend/tests/: conftest.py  test_listings.py  test_payments.py  test_rentals.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  firebase.ts  index.css
frontend/src/api/: client.ts  listings.ts  messages.ts  payments.ts  rentals.ts  users.ts
frontend/src/components/: ImageUploader.tsx  (+5 more)
infrastructure/: docker-compose.yml
infrastructure/terraform/: artifact_registry.tf  cloud_run.tf  cloud_sql.tf  gcs.tf  iam.tf  main.tf  memorystore.tf  outputs.tf  secret_manager.tf  variables.tf  workload_identity.tf
(+15 files in other folders)
